Solved homework 5
